Changelog
=========

HEAD
~~~~

1.0b5 (released 12/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Encode code annotations if encoding is required. [malthe]

- Added filename to XML syntax error exception message. [malthe]

- Fixed bug where a template would be wrapped with namespace
  definitions even if an XML header is present. [malthe]

- Added support for fallback element. [malthe]

- Enabled error handler for macro renderer. [malthe]

- Added error handler which adds debugging information to the
  exception object's string output (in debug-mode only). [malthe]

1.0b4 (released 28/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed translation issues (see recently added tests). [malthe]

- Refactored string coercion. [malthe]

1.0b3 (released 13/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed issue with parsing expression containing curly
  braces. [malthe]

- Added support for unscoped variable assignment. [malthe]

1.0b2 (released 11/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for translating dynamic body text (used in
  interpolation expressions). [malthe]

- Added support for macros prebound to keyword arguments. [malthe]

1.0b1 (released 2/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed bugs related to temporary variables with loops and
  conditions. [malthe]

- Set default value for `auto-reload` based on the CHAMELEON_DEBUG
  environment variable check. [malthe]

1.0a4 (released 9/29/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added method to generate unscoped temporary variables.  [malthe]

- Make lxml a hard dependency for now until the lxml-less logic is stable.
  [wichert]

1.0a3 (released 9/26/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- TemplateLoader now checks a default_parser class attribute if no
  parser is specified. [wichert]

1.0a2 (released 9/26/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for dynamic skip condition. [malthe]

- Fixed bug where an AttributeError would be raised when using the
  file cache. [malthe]

1.0a1 (released 9/24/2008)